Animation channels widgets (graph, action, NLA, *dopesheet*) block input for the search channel, and invert search toggle. #90364

Closed
opened 2021-08-02 05:01:09 +02:00 by bird_d · 7 comments

System Information
Operating system: Manjaro Linux, KDE
Graphics card: Nvidia 1660 Super

Blender Version
Broken: 2.93.1 and 3.0a
Worked: Not sure, assuming never, haven't tested 2.80 tho. Which I think is when the filter text box ED_time_scrub_channel_search_draw was implemented, since it wasn't in 2.79. which I looked at.

Short description of error
Animation channel widgets block input of the filter text and invert filter text boolean option

Exact steps for others to reproduce the error
Open a blend file, Animate something, scroll channels in the dopesheet/graph/nla until widgets (lock/hide/modifier wrench) are slightly above where they're shown and try to click the invert bool, or search text widget inside the v2d's for aforementioned spaces .

Video demonstration
screen_capture-2021-08-01_21.43.23.mp4

**System Information** Operating system: Manjaro Linux, KDE Graphics card: Nvidia 1660 Super **Blender Version** Broken: 2.93.1 and 3.0a Worked: Not sure, assuming never, haven't tested 2.80 tho. Which I think is when the filter text box ED_time_scrub_channel_search_draw was implemented, since it wasn't in 2.79. which I looked at. **Short description of error** Animation channel widgets block input of the filter text and invert filter text boolean option **Exact steps for others to reproduce the error** Open a blend file, Animate something, scroll channels in the dopesheet/graph/nla until widgets (lock/hide/modifier wrench) are slightly above where they're shown and try to click the invert bool, or search text widget inside the v2d's for aforementioned spaces . **Video demonstration** [screen_capture-2021-08-01_21.43.23.mp4](https://archive.blender.org/developer/F10258685/screen_capture-2021-08-01_21.43.23.mp4)
Author

Added subscriber: @bird_d

Added subscriber: @bird_d
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-08-02 11:16:04 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check

This issue was referenced by 06e3e2f21c

This issue was referenced by 06e3e2f21c92f672b3b88f8f0e028c02e9cfc013

This issue was referenced by dbd34a5acb

This issue was referenced by dbd34a5acb3d0be2bdbad54a427153de49e47f8e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90364
No description provided.